<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.firstscreen.FirstFragment"
    android:background="@drawable/background">

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="116dp"
        android:layout_height="116dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textfield_container"
        android:layout_marginBottom="58dp"
        android:src="@drawable/btn_add_photo"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/textfield_container"
        tools:viewBindingIgnore="true"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textfield_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:inputType="text"
            android:background="@drawable/textbox"
            android:hint="@string/name"
            android:textSize="14sp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textfield_palindrome"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/textfield_name"
            android:layout_marginTop="22dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:inputType="text"
            android:background="@drawable/textbox"
            android:hint="@string/palindrome"
            android:textSize="14sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_container"
        tools:viewBindingIgnore="true"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textfield_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_check"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintTop_toTopOf="parent"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:backgroundTint="@color/green_main"
            android:text="@string/check"
            android:textSize="12sp"
            app:cornerRadius="12dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/btn_check"
            android:layout_marginTop="22dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:backgroundTint="@color/green_main"
            android:text="@string/next"
            android:textSize="12sp"
            app:cornerRadius="12dp"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>